# walls-of-doom

./: .appveyor.yml  .clang-format  .clang-tidy  .gitignore  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  LICENSE.txt  README.md  appveyor.yml  get-ubuntu-packages.sh  package.sh  readme-to-pdf.sh  reformat.sh  release.sh  walls-of-doom.cbp
assets/: about.txt  platforms.txt
assets/about/: about.txt
assets/settings/: settings.txt
assets/shaders/: fragment.frag  vertex.vert
assets/tests/: wrap-test-source.txt  wrap-test-width-10.txt  wrap-test-width-20.txt  wrap-test-width-40.txt  wrap-test-width-80.txt
assets/words/: adjectives.txt  nouns.txt
autotest/: CMakeLists.txt  autotest.c
blender/: instructions.py  logo.blend  name-over-bricks.blend  name-with-lamp.blend  name.blend  render.sh
game/: CMakeLists.txt  about.c  about.h  command.h  constants.h  data.c  data.h  game.c  game.h  io.c  io.h  logger.c  logger.h  math.c  math.h  menu.c  menu.h  perks.c  perks.h  physics.c  physics.h  platform.c  platform.h  player.c  player.h  random.c  record.c  record.h  rest.c  rest.h  safe.h  sort.c  sort.h  types.h  walls-of-doom.c
launcher/: start-walls-of-doom.sh
scripts/: clang-format.sh  clang-tidy.sh  make-platforms.py  massif.sh  setup.sh  test.sh  valgrind.sh
scripts/llvm/: analyze.sh  reformat.sh
scripts/valgrind/: massif.sh  memcheck.sh
scripts/workflow/: release.sh
source/: CMakeLists.txt  about.c  array-utils.h  array.h  box.c  box.h  command.h  constants.h  data.c  data.h  game.c  game.h  insertion-sort.h  io.c  io.h  log.h  logger.c  logger.h  math.h  menu.c  menu.h  parser.h  perks.c  perks.h  physics.c  physics.h  platform.h  player.c  player.h  random.c  random.h  record.c  record.h  rest.c  rest.h  sort.c  sort.h  vector.c  vector.h  version.h  (+1 more)
sources/: about.cpp  about.h  about.hpp  analyst.cpp  analyst.hpp  bank.cpp  bank.hpp  base-io.cpp  base-io.h  base-io.hpp  box.cpp  box.hpp  clock.cpp  clock.hpp  code.cpp  code.h  code.hpp  color.cpp  color.h  color.hpp  command.cpp  command.h  command.hpp  constants.h.in  constants.hpp.in  data.cpp  data.h  data.hpp  game.cpp  game.h  game.hpp  graphics.cpp  graphics.hpp  high-io.cpp  high-io.h  high-io.hpp  integers.h  integers.hpp  investment.cpp  investment.h  (+46 more)
src/: main.c
tests/: CMakeLists.txt  tests.c  tests.cpp
unity/: CMakeLists.txt  unity.c  unity.h  unity_internals.h
walls-of-doom/: CMakeLists.txt  about.c  about.h  bank.c  bank.h  base-io.c  base-io.h  boolean.h  box.c  box.h  clock.c  clock.h  clock.h.in  code.c  code.h  codes.h  color.c  color.h  command.c  command.h  constants.h  constants.h.in  data.c  data.h  game.c  game.h  graphics.c  graphics.h  hash.c  hash.h  high-io.c  high-io.h  integers.h  investment.c  investment.h  io.c  io.h  joystick.c  joystick.h  logger.c  (+40 more)
